2006-06-05  Richard Hughes  <richard@hughsie.com>

	* man/on_ac_power.sgml:
	* man/pm-pmu.sgml:
	Don't use hardcoded .1 files, instead generate them using sgml files.

2006-06-05  Richard Hughes  <richard@hughsie.com>

	* NEWS: Add this file for release news. Required for autofoo.

2006-05-17  Richard Hughes  <richard@hughsie.com>

	* .cvsignore:
	Add this file to keep CVS happy.

	* pm/power.d/laptop-tools:
	* Makefile.am:
	Add this folder and file to make the low power actions easy to add.

	* pm-powersave:
	Do not just do hardcoded actions, instead run the scripts in
	/etc/pm/power.d/ with true and false arguments.

2006-05-02  Peter Jones  <pjones@redhat.com>

	* pm-pmu.c: Add a hack for bad system headers.

2006-05-02  Peter Jones  <pjones@redhat.com>

	* pm-action: add copyright and license notice.
	* Makefile: Add pm-pmu.c and pm-pmu.1 .
	* Makefile: Change CFLAGS; -g and friends should come from
	RPM_OPT_FLAGS when desired.
	* pm-pmu.c: suspend helper for b0rked macs.
	* pm-pmu.1: man page
	* pm/functions (pm_main): try pm-pmu before echoing stuff

2006-05-01  Peter Jones  <pjones@redhat.com>

	* Makefile: add "make test-archive"
	* pm/functions: handle an empty config.d correctly

2006-05-01  Peter Jones  <pjones@redhat.com>

	* Makefile: don't remove on_ac_power in "make clean"

2006-04-28  Peter Jones  <pjones@redhat.com>

	* Makefile: don't build on_ac_power
	* on_ac_power: add shell version of this
	* on_ac_power.c: no longer needed.

2006-04-28  Peter Jones  <pjones@redhat.com>

	* pm/hooks/05led: Resurrect this
	* pm/hooks/95led: ditto
	* pm/hooks/95ibm_led: remove this; it changes the behavior incorrectly.

2006-04-28  Richard Hughes  <richard@hughsie.com>

	* pm/functions-ati:
	* pm/functions-intel:
	* pm/functions-nvidia:
	Remove these files as we've now agreed that this belongs in HAL, and
	a HAL patch is close to being accepted.

2006-04-28  Richard Hughes  <richard@hughsie.com>
