@@ -1,0 +1,13 @@
+SUBDIRS =  hooks power.d
+
+extradir = $(sysconfdir)/pm
+
+extra_SCRIPTS =			\
+	functions		\
+	config
+
+EXTRA_DIST =			\
+	$(extra_SCRIPTS)
+
+clean-local :
+	rm -f *~
