@@ -1,0 +1,9 @@
+powerdir = $(sysconfdir)/pm/power.d
+
+power_SCRIPTS =			\
+	laptop-tools
+
+EXTRA_DIST=$(power_SCRIPTS)
+
+clean-local :
+	rm -f *~
